# general-classification

./: README.md  main.py  pyproject.toml  train.py
Classifier/: news_classification.ipynb
Classifier/Dataset/: Dataset.py  check_data.py  merge_dataset_files.py  pre_data_check.py  sentence_embedding.py  test.py  utils.py
Classifier/Model/: SentenceClassification.py
webScraping/: scrap_news.py
webScraping/NDTV/: LatestNews.py  NdtvNews.py  handler.py
webScraping/NDTV/helpers/: ndtv_response.py
