[tool.poetry]
name = "news-classification"
version = "0.0.1"
description = "news classification using LSTM"
authors = ["rawstar134 <prajapatihs2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
torch = "^2.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
